--- a/Masterarbeit 4/Tex/chapter7.tex
+++ b/Masterarbeit 4/Tex/chapter7.tex
@@ -43,6 +43,7 @@ Anschließend wurden den Teilnehmern Verständnisfragen zu ausgewählten Modelle
 Es wurden die vier  Modellpaare \textit{Lösungsinkrement entwickeln (Open UP)}, \textit{Scrum}, \textit{Systementwicklungsprojekt AG/AN} und \textit{Phasen Open UP -Inception}  aus Kapitel 5 ausgewählt. Hierbei wurde darauf geachtet, dass es sich um zwei kleine Modelle (<= 5 Aktivitäten) und zwei große Modelle (> 5 Aktivitäten) handelt. Gruppe 1 startete mit einem deklarativen Prozess und Gruppe 2 mit dem entsprechenden imperativen Prozess. Somit wurden von jeder Gruppe zwei imperative und zwei deklarative Prozesse bearbeitet.  \newline
 Im letzten Teil des Fragebogens wurden den Probanden noch vier Modellpaare direkt gegenüber gestellt und sie wurden nach ihrem präferierten Modell (deklarativ oder imperativ) gefragt und mussten in einem Freitextfeld den Grund für ihre Entscheidung angeben. Auch hier wurden den Teilnehmern wiederum zwei kleine (<= 5 Aktivitäten) und zwei große (> 5 Aktivitäten)  Modelle gezeigt. Es wurden die Modelle \textit{System spezifizieren (V-Modell XT)}, \textit{Phasen des Open UP}, \textit{Inkrementelle Entwicklung durchführen (V-Modell XT)} und \textit{Release deployen} ausgewählt. \newline
 Die semantische Gleichheit der Modellpaare wurde wie bereits in Kapitel 5 erwähnt durch das Testen von validen Pfaden durch die jeweiligen Modelle sichergestellt.\newline
+Die vollständigen Fragebögen können in Anhang C eingesehen werden.
 
 \begin{figure}[H]
 \begin{center}
@@ -210,6 +211,7 @@ Die Probanden, welche das imperative Modell besser fanden, gaben als Gründe den
 \end{center}
 \end{figure}
 
+
 \clearpage
 
 \section{Fazit der Studie}
@@ -262,6 +264,7 @@ Tabelle \ref{fig:TabelleStudie} fasst die Ergebnisse der Studie nochmal zusammen
 \end{center}
 \end{figure}
 
+Die kompletten Rohdaten der Umfrage mit allen Antworten der Teilnehmer können Anhang D entnommen werden.
 
 \subsection{Grenzen der Studie}
 
