--- a/Masterarbeit 4/Tex/chapter9.tex
+++ b/Masterarbeit 4/Tex/chapter9.tex
@@ -1,33 +1,1 @@
-\chapter{Verwandte Arbeiten}\label{sec:chapter9}
-
-In diesem Kapitel werden verwandte Arbeiten vorgestellt. Es werden Arbeiten zu den Themen Modellierung von Software-Engineering Prozessmodellen, Verständlichkeit von Prozessmodellierungssprachen und Vergleich von Prozessmodellierungssprachen beschrieben und gegenüber der Thematik der vorliegenden Arbeit abgegrenzt.
-
-\section{Modellierung von Softwareentwicklungsprozessen}
-
-Es gibt schon einige Arbeiten, welche sich mit der Modellierung von Software Engineering Prozessmodellen in BPMN beschäftigen.
-\cite{Menhorn2014} beschäftigt sich mit der Analyse und der Überführung von Softwareentwicklungsprozessen in die Prozessmodellierungssprache BPMN und der Erweiterung von BPMN bei eventuellen Grenzen der Darstellbarkeit.\newline
-Weiterhin gibt es drei Arbeiten, bzw. Blogeinträge, welche sich mit der Modellierung von Scrum \cite{software}, Open UP \cite{brunner2007fallstudie} und \cite{Bregenzer2014} V-Modell XT in BPMN beschäftigen. Hier werden jeweils Teile der drei Software-Engineering Prozessmodelle analysiert und anschließend in BPMN modelliert.\newline
-Im Gegensatz zur vorliegenden Arbeit werden in diesen Arbeiten entweder jeweils nur ein Software Engineering Prozessmodell modelliert oder die Modellierung wird nur in der Prozessmodellierungssprache BPMN durchgeführt. In der vorliegenden Arbeit hingegen werden Teile von allen drei Software Engineering Prozessmodellen in zwei verschiedenen Prozessmodellierungssprachen modelliert. Der Fokus der vorliegenden Arbeit liegt zudem auf der Beurteilung der Eignung zur Modellierung der beiden Prozessmodellierungssprachen und auf deren Vergleich und nicht auf der Modellierung der Softwareentwicklungsprozess an sich.\newline
-
-
-\section{Verständlichkeit von Prozessmodellierungssprachen}
-
-Verwandte Arbeiten zur Thematik Verständlichkeit von Prozessmodellierungssprachen werden im Folgenden vorgestellt.
-
-Es existieren bereits einige Arbeiten, welche die Verständlichkeit von Prozessmodellen untersuchen. \cite{bpm07} z.B. untersucht die Verständlichkeit von Ereignisgesteuerten Prozessketten (EPK), während in \cite{gruhn2006complexity} die Komplexität und Verständlichkeit von BPMN und UML-Diagrammen untersucht wird. \cite{reijers2011study} untersucht die Verständlichkeit von Ereignisgesteuerten Prozessketten (EPK) und BPMN im Hinblick auf die Komplexität der XOR-,OR- und UND-Verzweigungen. \newline
-In \cite{sabrina942} wird die Verständlichkeit von deklarativen Prozessmodellen im Hinblick auf die Verwendung von hierarchischen Unterprozessen untersucht. Eine weitere Arbeit, welche sich mit der Verständlichkeit von deklarativen Prozessmodellen beschäfigt, ist \cite{haisjackl2014understanding}. Hier wird das Vorgehen von Systemanalysten beim Verstehen von deklarativen Modellen untersucht.\newline
-
-In der vorliegenden Arbeit werden einige Erkenntnisse der vorgestellten Arbeiten beim Modellieren und beim Vergleich der Prozessmodelle beachtet. Beispielsweise wurden Unterprozesse beim  Modellieren verwendet, um komplexe Prozessmodelle übersichtlicher darzustellen. Diese wurden  aber beim Modellieren von sowohl BPMN als auch ConDec bei den gleichen Sachverhalten angewendet.\newline
-Außerdem wurden die Ergebnisse von \cite{ haisjackl2014understanding} zum schwierigeren Verständnis von Patterns in BPMN bei der Durchführung des Vergleichs herangezogen.\newline
-Im Gegensatz zu den hier vorgestellten Arbeiten liegt der Fokus des Vergleiches in dieser Arbeit nicht ausschließlich auf der Verständlichkeit der beiden Prozessmodellierungssprachen, sondern vor allem auf deren Eignung zur Modellierung. Die Untersuchung der Verständlichkeit nimmt zwar in der vorliegenden Arbeit ebenfalls eine große Rolle ein, jedoch wird hier explizit die Verständlichkeit von zwei verschiedenen Prozessmodellierungssprachen untersucht.\newline
-
-
-\section{Vergleich von Prozessmodellierungssprachen}
-
-Dieser Abschnitt widmet sich Arbeiten, welche sich mit dem Vergleich von Prozessmodellierungssprachen beschäftigen.\newline
-Die Arbeit \cite{recker2007does} untersucht Unterschiede in der Verständlichkeit zwischen Ereignisgesteuerten Prozessketten (EPK) und BPMN.\newline
-Der Artikel \cite{fahland2010} beschäftigt sich mit dem Unterschied zwischen imperativen und deklarativen Prozessmodellierungssprachen und arbeitet deren Stärken und Schwächen heraus. Der Vergleich baut auf den Unterschieden von imperativen und deklarativen Programmiersprachen auf. \newline
-\cite{pichler2012} untersucht aufbauend auf den Erkenntnissen von  \cite{fahland2010} die Verständlichkeit von imperativen und deklarativen Prozessmodellierungssprachen anhand einer Studie. Als imperative Prozessmodellierungssprache dient in diesem Artikel ebenfalls BPMN und als deklarative Prozessmodellierungssprache ebenfalls ConDec. \newline 
-\cite{fahland2010} betrachtet im Wesentlichen die Stärken und Schwächen von imperativen und deklarativen Prozessmodellierungssprachen im Allgemeinen. Die vorliegende Arbeit untersucht die Stärken und Schwächen von imperativen und deklarativen Prozessmodellierungssprachen im Hinblick auf deren Eignung zur Modellierung in Bezug auf unterschiedlich große Prozessmodelle. Hier liegt der Fokus nicht auf sequentiellen und umständlichen Informationen, sondern es werden die Stärken und Schwächen der imperativen und deklarativen Prozessmodellierungssprachen bezüglich auf den gleichen Sachverhalt und damit auch die gleichen abzubildenden Informationen betrachtet.\newline
-Die vorliegende Arbeit untersucht die Verständlichkeit von deklarativen und imperativen Prozessmodellen nicht nur wie \cite{pichler2012} im Allgemeinen, sondern auch speziell im Hinblick auf Unterschiede in der Verständlichkeit bei großen und kleinen Prozessmodellen. In der durchgeführten Studie in \cite{pichler2012} wurden die Teilnehmer vorher sowohl in der imperativen, als auch in der deklarativen Prozessmodellierung geschult. In der Studie der vorliegenden Arbeit wurde darauf geachtet, Probanden mit unterschiedlichem Hintergrundwissen zu imperativen und deklarativen Prozessmodellen zu befragen. Das Wissen der Teilnehmer der Studie reichte hier von sehr großem Wissen bis überhaupt kein Wissen.\newline
-
+\chapter{Verwandte Arbeiten}\label{sec:chapter9}In diesem Kapitel werden verwandte Arbeiten vorgestellt. Es werden Arbeiten zu den Themen Modellierung von Softwareentwicklungsprozessen, Verständlichkeit von Prozessmodellierungssprachen und Vergleich von Prozessmodellierungssprachen beschrieben und gegenüber der Thematik der vorliegenden Arbeit abgegrenzt.\section{Modellierung von Softwareentwicklungsprozessen}Es gibt schon einige Arbeiten, welche sich mit der Modellierung von Software Engineering Prozessmodellen in BPMN beschäftigen.\cite{Menhorn2014} beschäftigt sich mit der Analyse und der Überführung von Softwareentwicklungsprozessen in die Prozessmodellierungssprache BPMN und der Erweiterung von BPMN bei eventuellen Grenzen der Darstellbarkeit.\newlineWeiterhin gibt es drei Arbeiten, bzw. Blogeinträge, welche sich mit der Modellierung von Scrum \cite{software}, Open UP \cite{brunner2007fallstudie} und \cite{Bregenzer2014} V-Modell XT in BPMN beschäftigen. Hier werden jeweils Teile der drei Software-Engineering Prozessmodelle analysiert und anschließend in BPMN modelliert.\newlineIm Gegensatz zur vorliegenden Arbeit wird in den Arbeiten \cite{software}, \cite{brunner2007fallstudie}, \cite{Bregenzer2014} jeweils nur ein Softwareentwicklungsprozess modelliert und auch nur in der imperativen Prozessmodellierungssprache BPMN. In \cite{Menhorn2014} werden ebenfalls Teile von Scrum, Open UP und V-modell XT modelliert, jedoch nur in der imperativen Prozessmodellierungssprache BPMN. Der Fokus der Arbeit \cite{Menhorn2014} liegt auf der Erweiterung von BPMN um zusätzliche Notationselemente.\newlineIn der vorliegenden Arbeit hingegen werden Teile von allen drei Softwareentwicklungsprozessmodellen in der imperativen Prozessmodellierungssprache BPMN und der deklarativen Prozessmodellierungssprache ConDec modelliert. Der Fokus der vorliegenden Arbeit liegt zudem auf der Beurteilung der Eignung zur Modellierung der beiden Prozessmodellierungssprachen und auf deren Vergleich und nicht auf der Modellierung der Softwareentwicklungsprozesse an sich oder der Erweiterung der Notationsumfänge der beiden Prozessmodellierungssprachen.\newline\section{Verständlichkeit von Prozessmodellierungssprachen}Verwandte Arbeiten zur Thematik Verständlichkeit von Prozessmodellierungssprachen werden im Folgenden vorgestellt.Es existieren bereits einige Arbeiten, welche die Verständlichkeit von Prozessmodellen untersuchen. \cite{bpm07} z.B. untersucht die Verständlichkeit von Ereignisgesteuerten Prozessketten (EPK), während in \cite{gruhn2006complexity} die Komplexität und Verständlichkeit von BPMN und UML-Diagrammen untersucht wird. \cite{reijers2011study} untersucht die Verständlichkeit von EPK und BPMN im Hinblick auf die Komplexität der XOR-, OR- und UND-Verzweigungen. \newlineIn \cite{sabrina942} wird die Verständlichkeit von deklarativen Prozessmodellen im Hinblick auf die Verwendung von hierarchischen Unterprozessen untersucht. Eine weitere Arbeit, welche sich mit der Verständlichkeit von deklarativen Prozessmodellen beschäfigt, ist \cite{haisjackl2014understanding}. Hier wird das Vorgehen von Systemanalysten beim Verstehen von deklarativen Modellen untersucht.\newlineIn der vorliegenden Arbeit werden einige Erkenntnisse der vorgestellten Arbeiten beim Modellieren und beim Vergleich der Prozessmodelle beachtet. Beispielsweise wurden Unterprozesse beim  Modellieren verwendet um komplexe Prozessmodelle übersichtlicher darzustellen. Diese wurden  aber beim Modellieren von sowohl BPMN als auch ConDec bei den gleichen Sachverhalten angewendet.\newlineAußerdem wurden die Ergebnisse von \cite{haisjackl2014understanding} zum schwierigeren Verständnis von Patterns in BPMN bei der Durchführung des Vergleichs herangezogen.\newlineIm Gegensatz zu den hier vorgestellten Arbeiten liegt der Fokus des Vergleiches in dieser Arbeit nicht ausschließlich auf der Verständlichkeit der beiden Prozessmodellierungssprachen sondern vor allem auf deren Eignung zur Modellierung. Die Untersuchung der Verständlichkeit nimmt in der vorliegenden Arbeit nur einen kleinen Teil ein. Weitere Aspekte, die in dieser Arbeit betrachtet werden sind die generelle Anwendbarkeit der beiden Prozessmodellierungssprachen sowie deren Grenzen bei der Modellierung. \newline\section{Vergleich von Prozessmodellierungssprachen}Dieser Abschnitt widmet sich Arbeiten, welche sich mit dem Vergleich von Prozessmodellierungssprachen beschäftigen.\newlineDie Arbeit \cite{recker2007does} untersucht Unterschiede in der Verständlichkeit zwischen Ereignisgesteuerten Prozessketten (EPK) und BPMN.\newlineDer Artikel \cite{fahland2010} beschäftigt sich mit dem Unterschied zwischen imperativen und deklarativen Prozessmodellierungssprachen und arbeitet deren Stärken und Schwächen heraus. Der Vergleich baut auf den Unterschieden von imperativen und deklarativen Programmiersprachen auf. \newline\cite{pichler2012} untersucht aufbauend auf den Erkenntnissen von  \cite{fahland2010} die Verständlichkeit von imperativen und deklarativen Prozessmodellierungssprachen anhand einer Studie. Als imperative Prozessmodellierungssprache dient in diesem Artikel ebenfalls BPMN und als deklarative Prozessmodellierungssprache ebenfalls ConDec. \newline \cite{fahland2010} und \cite{pichler2012} untersuchen, bei welchen abzubildenden Informationen entweder imperative oder deklarative Prozessmodellierungssprachen vorzuziehen sind. In der vorliegenden Arbeit beim Vergleich der Anwendbarkeit der beiden Prozessmodellierungssprachen nicht unter bestimmten abzubildenden Informationen unterschieden. Der Vergleich wird ganz allgemein für alle möglichen abzubildenden Informationen durchgeführt. \newlineIn der durchgeführten Studie in \cite{pichler2012} wurden die Teilnehmer vorher sowohl in der imperativen, als auch in der deklarativen Prozessmodellierung geschult. In der Studie der vorliegenden Arbeit wurde darauf geachtet, Probanden mit unterschiedlichem Hintergrundwissen zu imperativen und deklarativen Prozessmodellen zu befragen. Das Wissen der Teilnehmer der Studie reichte hier von sehr großem Wissen bis überhaupt kein Wissen.\newline
