--- a/Masterarbeit 4/Tex/sources.tex
+++ b/Masterarbeit 4/Tex/sources.tex
@@ -249,6 +249,7 @@ Beispiel: Korrekt: [A,C,A,B,B]; Inkorrekt: [C]\\
 
 \chapter{Fragebögen}
 
-%\includepdf[pages={1-7,9-12}]{Fragebogen1.pdf}
+\includepdf[pages={1-7,9-12}]{Fragebogen1.pdf}
+\includepdf[pages={1-11}]{Fragebogen2.pdf}
 
 
