--- a/Masterarbeit 4/Tex/Literature.bib
+++ b/Masterarbeit 4/Tex/Literature.bib
@@ -733,7 +733,7 @@ year={2014}}
   publisher={De Gruyter}
 }
 
-@book{gumm2012einführung,
+@book{gumm2012einfuhrung,
   title={Einf{\"u}hrung in die Informatik},
   author={Gumm, H.P. and Sommer, M.},
   year={2012},
