--- a/Masterarbeit 4/Tex/chapter7.tex
+++ b/Masterarbeit 4/Tex/chapter7.tex
@@ -128,11 +128,12 @@ Der Mittelwert aller acht Fragen insgesamt ist bei der imperativen Gruppe 0,89 u
 \end{center}
 \end{figure}
 
-Beim Modell \textit{V-Modell: Systementwicklungsprojekt AG/AN} der Verständnisfrage 3 lagen die Ergebnisse des deklarativen Modell bis auf Frage 3 immer unter denen des imperativen Modells (Abbildung \ref{fig:Frage3}). Starke Abweichung gab es bei den Fragen 2, 4, 5, 7. \newline
+Beim Modell \textit{V-Modell: Systementwicklungsprojekt AG/AN} der Verständnisfrage 3 lagen die Ergebnisse des deklarativen Modell bis auf Frage 3 immer unter denen des imperativen Modells (Abbildung \ref{fig:Frage3}). Starke Abweichung gab es bei den Fragen 2, 4, 5, 6, 7. \newline
 Bei Frage 2 (\textit{Die Aktivitäten \grqq Prototypische Entwicklung durchführen\grqq, \grqq Komponentenbasierte Entwicklung durchführen\grqq \ und \grqq Inkrementelle Entwicklung durchführen\grqq \ können parallel zueinander ausgeführt werden}) war den Teilnehmern, welche das deklarative Modell bearbeiten mussten, die Notation des Constraints \textit {Exclusive Choice 1 of 3} nicht ganz klar. Sechs der 16 Probanden kreuzten hier entweder \textit{Ja} oder \textit{Unentschlossen} an. Hier musste im deklarativen Modell ein zusätzlicher Unterprozess eingefügt werden, da das Verhalten des Prozesses nicht anders darzustellen war. Eventuell waren die Probanden auch von dem zusätzlichen Unterprozess iritiert.\newline
 Sowohl Frage 4 (\textit{Nach Ausführung der Aktivität \grqq System abnehmen\grqq \ kann die Aktivität \grqq Anforderungen festlegen\grqq \ ausgeführt werden}, als auch Frage 5 (\textit{Nach Ausführung der Aktivität \grqq System abnehmen\grqq \ kann die Aktivität \grqq Projekt ausschreiben\grqq \ ausgeführt werden}) zielten wieder auf Verzweigungen des Prozesses ab und waren den Teilnehmern mit dem imperativen Prozess verständlicher. \newline
+Frage 6 (\textit{Die Aktivität "Iteration planen" kann innerhalb einer Prozessinstanz genau einmal ausgeführt werden}) wurde von der deklarativen Gruppe weniger richtig beantwortet als von der deklarativen. Hier war der deklarativen Gruppe vermutlich die Möglichkeit zur Rückkehr an eine frühere Aktivität im Prozess nicht ganz klar. \newline
 Frage 7 (\textit{Nach Ausführung der Aktivität \grqq Projekt abschließen\grqq \ endet der Prozess}) wurde von den Probanden, welchen das imperative Modell gezeigt wurde, richtiger beantwortet. Hier war im imperativen Modell durch das BPMN-Ende-Symbol den Teilnehmern das Ende des Prozesses wohl bewußter als die Darstellung durch das Constraint \textit{not succession} im deklarativen Modell.\newline
-Bei allen acht Fragen insgesamt ist der Mittelwert bei der imperativen Gruppe 0,96 und bei der deklarativen Gruppe 0,70. Hieraus ergibt sich eine Differenz von 0,2578 Punkten. \newline
+Bei allen acht Fragen insgesamt ist der Mittelwert bei der imperativen Gruppe 0,9375 und bei der deklarativen Gruppe 0,671. Hieraus ergibt sich eine Differenz von 0,285 Punkten. \newline
 
 
 \begin{figure}[htp]
@@ -145,7 +146,7 @@ Bei allen acht Fragen insgesamt ist der Mittelwert bei der imperativen Gruppe 0,
 
 Die Ergebnisse des Prozesses \textit{Open UP: Inception} weichen zwischen den deklarativen und imperativen Modellen nicht stark voneinander ab (Abbildung \ref{fig:Frage3}). \newline
 Lediglich bei Frage 6 (\textit{Die Aktivität \grqq Iteration planen und managen\grqq \ kann beliebig oft ausgeführt werden}) und Frage 7 (\textit{Die Aktivitäten \grqq Anforderungen identifizieren und verfeinern\grqq \ und \grqq auf technisches Vorgehen einigen\grqq \ können beliebig oft ausgeführt werden}) war den Teilnehmern wohl teilweise die Funktion des Existenz (1) Constraints nicht ganz klar oder wurde übersehen.\newline
-Der gesamte Mittelwert aller acht Fragen ist bei der imperativen Gruppe 0,96 und bei der deklarativen Gruppe 0,85. Die Differenz beträgt somit 0,14 Punkte. \newline
+Der gesamte Mittelwert aller acht Fragen ist bei der imperativen Gruppe 0,96 und bei der deklarativen Gruppe 0,875. Die Differenz beträgt somit 0,09 Punkte. \newline
 
 
 \begin{figure}[htp]
