--- a/Masterarbeit 4/Tex/sources.tex
+++ b/Masterarbeit 4/Tex/sources.tex
@@ -252,4 +252,24 @@ Beispiel: Korrekt: [A,C,A,B,B]; Inkorrekt: [C]\\
 \includepdf[pages={1-7,9-12}]{Fragebogen1.pdf}
 \includepdf[pages={1-11}]{Fragebogen2.pdf}
 
+\chapter{Rohdaten}
+\includepdf[pages={1-1}]{RohdatenAllgemein}
+\includepdf[pages={1-1}]{RohdatenFrage12}
+\includepdf[pages={1-1}]{RohdatenFrage13}
+\includepdf[pages={1-1}]{RohdatenFrage14}
+\includepdf[pages={1-1}]{RohdatenFrage15}
+\includepdf[pages={1-2}]{RohdatenFrage17}
+\includepdf[pages={1-1}]{RohdatenFrage19}
+\includepdf[pages={1-1}]{RohdatenFrage21}
+\includepdf[pages={1-1}]{RohdatenFrage23}
+
+
+
+
+
+
+
+
+
+
 
